# airflow_gun

./: AIRFLOW ПРОВАЙДЕР «GUN» В СТИЛЕ TASKFLOW.pptx  pyproject.toml  Диплом Geekbrains.docx  ЗАЩИТА.docx
airflow/providers/gun/: get_provider_info.py
airflow/providers/gun/back/: __init__.py
airflow/providers/gun/ch/: __init__.py
airflow/providers/gun/http/: __init__.py  preemptive_basic_auth.py
airflow/providers/gun/pg/: __init__.py
airflow/providers/gun/pipe/: __init__.py
tests/clickhouse_test/: ch_schema.sql  dag.py  sql_file.sql  sql_file_multi_statements.sql
tests/http_test/: dag.py  hello_world.gzip
